Move legacy doc to get-started and apply layout from the manual

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -3377,6 +3377,11 @@ display: block;
 
 
 }
+#back:before {
+  content: "\f053";
+  font-family: "FontAwesome";
+  margin-right: 10px;
+}
 li.terminus-usage {
   list-style:none !important;
 }
