Use same color as CTA on homepage

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -3484,7 +3484,7 @@ li.terminus-usage {
   text-decoration: none;
 }
 .pager-guides > li > a {
-  background-color: #47738F!important;
+  background-color: #0093c9!important;
   color: #fff!important;
   font-weight: bold!important;
   border: none!important;
