--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5146,7 +5146,7 @@ div.navsearch-container {
   max-width:33.3%;
 }
 .upstream-overview-outter {
-  padding: 10px;
+  padding: 25px;
   border-radius: 5px;
   border: solid #0093c9 2px;
   display: inline-flex;
@@ -5156,7 +5156,6 @@ div.navsearch-container {
     text-align: left;
     margin-left: 10px;
     display: block;
-    margin-top: 10px;
 }
 .upstream-content-inner-content {
   text-align: left;
@@ -5166,10 +5165,7 @@ div.navsearch-container {
   margin-top:-10px;
 }
 .upstream-overview-outter-clear::after {
-  font-family: "FontAwesome" !important;
-  content: '\f063';
-  color: #0093c9;
-  font-size: xx-large;
+  content: url('/docs/assets/images/arrow.svg');
 }
 .upstream-overview-outter-clear {
   text-align: center;
@@ -5177,4 +5173,7 @@ div.navsearch-container {
 .upstream {
   padding-left:10px;
   font-size:small;
+}
+.upstream li {
+  line-height: 1.35;
 }
