Align border color with arrow svg

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5148,7 +5148,7 @@ div.navsearch-container {
 .upstream-overview-outter {
   padding: 25px;
   border-radius: 5px;
-  border: solid #0093c9 2px;
+  border: solid #0A6BB5 2px;
   display: inline-flex;
 }
 
