--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -5389,16 +5389,16 @@ width: 100% !important;
   display: block !important;
 }
 .algolia-autocomplete .algolia-docsearch-suggestion--highlight{
-  background-color: #EFD01B;
-  color: #222;
+  background-color: #EFD01B!important;
+  color: #222!important;
 }
 .algolia-autocomplete .algolia-docsearch-suggestion--text .algolia-docsearch-suggestion--highlight{
-  box-shadow:inset 0 -2px 0 0 #EFD01B;
+  box-shadow:inset 0 -2px 0 0 #EFD01B!important;
 }
 /**DocSearch Result Hover**/
 .algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion.suggestion-layout-simple,.algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion:not(.suggestion-layout-simple) .algolia-docsearch-suggestion--content{
-  background: #DDE5E7;
+  background: #DDE5E7!important;
 }
 .docsearch {
-  margin-right: 20px;
+  margin-right: 20px!important;
 }
